<resources>
    <string name="app_name">LoShop</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_google_sign_in">Sign in with Google</string>
    <string name="action_guest_sign_in">Continue as a Guest</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dont_have_acc">Dont have a Loshop account!!</string>
    <string name="action_sign_up">Create Account</string>
    <string name="sign_up_title">Where Are You?</string>
    <string name="name">Name</string>
    <string name="add1">Address line 1</string>
    <string name="add2">Address line 2</string>
    <string name="pin">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="use_product">I will use product and services</string>
    <string name="provide_product">I will provide product and services</string>
    <string name="deliver_product">I will deliver product and services</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
</resources>
